Fix language selector by shortening overlapping title

--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,11 @@ body{
     text-align: right;
     margin-top: 60px;
     color: #FFF;
-
 }
 
 #buffer_top{
     background-color: rgb(145, 135, 135, 0.6);
-    height: 100px;
+    height: 108px;
     border-bottom: 2px solid #adadad;
 }
 
@@ -55,7 +54,7 @@ body{
 
 #text_top {
     margin:0px;
-    padding: 10px;
+    padding: 5px 10px;
     font-size: 25pt;
     font-family: "Permanent Marker", serif;
     letter-spacing: 2px;
@@ -63,6 +62,7 @@ body{
     text-align: left;
     color: rgb(255, 255, 255);
     position: fixed;
+    margin-right: 100px;
 }
 
 #centerwrap{
